--- a/.gitignore
+++ b/.gitignore
@@ -4,22 +4,25 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-package-lock.json
 
-# === Build ===
+# === Build / Output ===
 build/
 dist/
 coverage/
+.next/
+out/
 
-# === Environment ===
+# === Environment Variables ===
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+/backend/.env
+/frontend/.env
 
 # === Logs ===
-logs
+logs/
 *.log
 *.pid
 *.seed
@@ -38,17 +41,16 @@ Thumbs.db
 *.swp
 *.swo
 
-# === Backend specific ===
-/backend/node_modules
-/backend/.env
-/backend/package-lock.json
-
-# === Frontend specific ===
-/frontend/node_modules
-/frontend/.env
-/frontend/package-lock.json
-
-# === Temporary Files ===
+# === Temporary / Cache ===
 tmp/
 temp/
 .cache/
+
+# === Frontend / Backend specific ===
+/backend/node_modules
+/frontend/node_modules
+/frontend/package-lock.json
+/backend/package-lock.json
+
+# === Optional: VSCode Workspace Settings ===
+*.code-workspace
